Took network out of main and gave it its own module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(Torch REQUIRED)
 
-add_executable(mnist mnist.cpp)
+add_executable(mnist mnist.cpp net.cpp)
 target_link_libraries(mnist ${TORCH_LIBRARIES})
